--- a/tests/Task3.Application.Tests.Unit/Task3.Application.Tests.Unit.csproj
+++ b/tests/Task3.Application.Tests.Unit/Task3.Application.Tests.Unit.csproj
@@ -19,6 +19,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="NSubstitute" Version="4.4.0" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.15" />
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="FluentAssertions.Analyzers" Version="0.17.2" />
   </ItemGroup>
 
   <ItemGroup>
